--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,9 +94,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/images/thumb-accreditation.png"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card1.webp"
+          alt="médecin consultant"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
@@ -123,9 +123,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/accueil.jpg"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card2.webp"
+          alt="stéthoscope sur une carte"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
@@ -152,9 +152,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/images/thumb-vaccination.png"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card3.webp"
+          alt="médecin avec cube de jeux médicaux"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
@@ -181,9 +181,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/images/thumb-vaccination.png"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card4.webp"
+          alt="médecin qui réfléchit"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
@@ -211,9 +211,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/images/thumb-vaccination.png"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card5.webp"
+          alt="personnel médical faisant un vaccin"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
@@ -240,9 +240,9 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/images/thumb-vaccination.png"
-          alt=""
-          class="w-full h-auto rounded-lg"
+          src="/src/img/card6.webp"
+          alt="personnel médical faisant un vaccin"
+          class="w-90 h-auto rounded-lg ml-auto"
         />
       </div>
     </article>
