--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -144,7 +144,7 @@ import * as Plot from "@observablehq/plot";
           devient la 3ème cause de mortalité.
         </p>
         <a
-          href="/causes-deces"
+          href="/cause-deces"
           class="text-purple-700 font-medium hover:text-purple-900"
         >
           En savoir plus →
