--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -14,8 +15,7 @@ import "../styles/global.css";
   <nav class="bg-purple-900 shadow-lg sticky top-0 z-10">
     <div class="max-w-6xl mx-auto px-6">
       <div class="flex items-center justify-between h-16">
-        <h1 class="text-xl font-semibold text-white">Juline & Margaux
-        </h1>
+        <h1 class="text-xl font-semibold text-white">Juline & Margaux</h1>
         <div class="flex space-x-4">
           <a
             href="/"
@@ -47,6 +47,7 @@ import "../styles/global.css";
   </nav>
   <body>
     <slot />
+    <Footer />
   </body>
 
   <style>
@@ -57,5 +58,6 @@ import "../styles/global.css";
       height: 100%;
     }
   </style>
+
 
 </html>
