--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,13 @@ import Footer from "../components/Footer.astro";
   <nav class="bg-purple-900 shadow-lg sticky top-0 z-10">
     <div class="max-w-6xl mx-auto px-6">
       <div class="flex items-center justify-between h-16">
-        <h1 class="text-xl font-semibold text-white">Juline & Margaux</h1>
+        <a href="/">
+          <img
+            src="/src/img/Logo-SAE303.svg"
+            alt="Logo SAE303"
+            class="h-8 w-auto hover:opacity-80 transition"
+          />
+        </a>
         <div class="flex space-x-4">
           <a
             href="/"
