--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,22 +30,10 @@ import Footer from "../components/Footer.astro";
             Graphique
           </a>
           <a
-            href="/carte"
+            href="/conclusion"
             class="bg-white/20 text-white px-4 py-2 rounded-lg hover:bg-white/30"
           >
-            Carte leaflet
-          </a>
-          <a
-            href="/serveur"
-            class="bg-white/20 text-white px-4 py-2 rounded-lg hover:bg-white/30"
-          >
-            Rendu côté serveur
-          </a>
-          <a
-            href="/filtre"
-            class="bg-white/20 text-white px-4 py-2 rounded-lg hover:bg-white/30"
-          >
-            Carte avec filtres
+            Conclusion de notre analyse
           </a>
         </div>
       </div>
