--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,11 +26,7 @@ import * as Plot from "@observablehq/plot";
       </a>
     </div>
     <div>
-      <img
-        src="/src/img/accueil.jpg"
-        alt="Illustration"
-        class="w-full h-auto"
-      />
+      <img src="/img/accueil.jpg" alt="Illustration" class="w-full h-auto" />
     </div>
   </div>
 
@@ -94,7 +90,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card1.webp"
+          src="/img/card1.webp"
           alt="médecin consultant"
           class="w-90 h-auto rounded-lg ml-auto"
         />
@@ -123,7 +119,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card2.webp"
+          src="/img/card2.webp"
           alt="stéthoscope sur une carte"
           class="w-90 h-auto rounded-lg ml-auto"
         />
@@ -152,7 +148,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card3.webp"
+          src="/img/card3.webp"
           alt="médecin avec cube de jeux médicaux"
           class="w-90 h-auto rounded-lg ml-auto"
         />
@@ -181,7 +177,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card4.webp"
+          src="/img/card4.webp"
           alt="médecin qui réfléchit"
           class="w-90 h-auto rounded-lg ml-auto"
         />
@@ -211,7 +207,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card5.webp"
+          src="/img/card5.webp"
           alt="personnel médical faisant un vaccin"
           class="w-90 h-auto rounded-lg ml-auto"
         />
@@ -240,7 +236,7 @@ import * as Plot from "@observablehq/plot";
       </div>
       <div>
         <img
-          src="/src/img/card6.webp"
+          src="/img/card6.webp"
           alt="personnel médical faisant un vaccin"
           class="w-90 h-auto rounded-lg ml-auto"
         />
